--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -25,23 +25,23 @@
           <div class="col-sm-4">Com</div>
         </div>
         <!-- First Row Batu -->
-        <div class="row text-center">
+        <div class="row text-center py-sm-3">
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/batu.png" alt="" />
             </div>
           </div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/batu.png" alt="" />
             </div>
           </div>
         </div>
         <!-- Second Row VS and Paper -->
-        <div class="row mt-sm-3 mb-sm-3 text-center mb-1">
+        <div class="row mt-sm-3 mb-sm-3 text-center mb-1 py-sm-3">
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/kertas.png" alt="" />
             </div>
           </div>
@@ -53,21 +53,21 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/kertas.png" alt="" />
             </div>
           </div>
         </div>
         <!-- Third Row Scissor -->
-        <div class="row text-center">
+        <div class="row text-center py-sm-3">
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/gunting.png" alt="" />
             </div>
           </div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <div class="shadow mx-auto">
+            <div class="mx-auto">
               <img src="/assets/img/gunting.png" alt="" />
             </div>
           </div>
