--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -20,20 +20,24 @@
       </div>
       <div class="container col-12 col-md-7 text-center fw-bold py-4 text-uppercase">
         <div class="row text-center mb-3 fs-3">
-          <div class="col-sm-4">Player 1</div>
+          <div class="col-sm-4">
+            Player 1
+            <p class="d-sm-none d-block">VS Com</p>
+          </div>
           <div class="col-sm-4"></div>
-          <div class="col-sm-4">Com</div>
+          <div class="col-sm-4 d-sm-block d-none">Com</div>
         </div>
         <!-- First Row Batu -->
         <div class="row text-center py-sm-3">
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-2 p-sm-0" id="rockPlayer" onclick="rockPlayer()">
               <img src="/assets/img/batu.png" alt="" />
+              <p class="d-sm-none d-block">Choose Player 1</p>
             </div>
           </div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-0 p-sm-0" id="rockCom">
               <img src="/assets/img/batu.png" alt="" />
             </div>
           </div>
@@ -41,19 +45,20 @@
         <!-- Second Row VS and Paper -->
         <div class="row mt-sm-3 mb-sm-3 text-center mb-1 py-sm-3">
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-2 p-sm-0" id="paperPlayer" onclick="paperPlayer()">
               <img src="/assets/img/kertas.png" alt="" />
+              <p class="d-sm-none d-block">Choose Player 1</p>
             </div>
           </div>
-          <div class="col-sm-4 align-content-center text-center versus">
-            <div class="mx-auto text-center">
+          <div class="col-sm-4 align-content-center text-center">
+            <div class="mx-auto text-center" id="versus">
               <h1>VS</h1>
               <!-- <h4>Player 1</h4>
               <h4>WIN</h4> -->
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-0 p-sm-0" id="paperCom">
               <img src="/assets/img/kertas.png" alt="" />
             </div>
           </div>
@@ -61,13 +66,14 @@
         <!-- Third Row Scissor -->
         <div class="row text-center py-sm-3">
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-2 p-sm-0" id="scissorPlayer" onclick="scissorPlayer()">
               <img src="/assets/img/gunting.png" alt="" />
+              <p class="d-sm-none d-block">Choose Player 1</p>
             </div>
           </div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <div class="mx-auto">
+            <div class="mx-auto p-0 p-sm-0 id" id="scissorCom">
               <img src="/assets/img/gunting.png" alt="" />
             </div>
           </div>
@@ -75,7 +81,7 @@
         <!-- Reset Button -->
         <div class="row text-center">
           <div class="col-sm-4"></div>
-          <div class="col-sm-4">
+          <div class="col-sm-4" id="resetGame" onclick="reload()">
             <img src="/assets/img/refresh.png" alt="" class="refresh-button mx-auto" />
           </div>
           <div class="col-sm-4"></div>
@@ -85,5 +91,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="/assets/js/scripts.js"></script>
   </body>
 </html>
