--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
           </p>
           <button type="button" class="btn btn-warning col-sm-3 mt-sm-3">SEE MORE</button>
         </div>
-        <div class="col-sm-7 h-1 border d-flex justify-content-end">
-          <div class="mb-lg-5 col-sm-9 col-12 mb-3 border ">
-            <div class="bg-dark  d-flex flex-row justify-content-end border">
+        <div class="col-sm-7 h-1 border">
+          <div class="mb-lg-5  mb-3 border d-flex justify-content-end">
+            <div class="bg-dark col-sm-9 col-12 d-flex">
               <div>
                 <img src="/assets/img/image 8.jpg" class="card-img border rounded-circle" alt="..." >
               </div>
@@ -195,7 +195,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
