--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     
 
-    <title>Challange 3</title>
+    <title>Challange 4</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -57,7 +57,9 @@
         <div class="text-center">
           <p class="text-uppercase fontbesar">Play Traditional Game</p>
           <p class="text-capitalize fs-3 d-none d-sm-block">Experience new tradional game play</p>
-          <button class="btn btn-warning col-sm-3 fw-bold p-3 mt-5">PLAY NOW</button>
+          <a href="/assets/html/game.html" class="btn btn-warning col-sm-3 fw-bold p-3 mt-5">
+            PLAY NOW
+          </a>
         </div>
       </div>
       <div class="position-absolute bottom-0 start-50 translate-middle-x text-center">
@@ -140,27 +142,27 @@
           <div class="container mt-sm-5 ">
             <div class="row align-items-start col-lg-6 text-uppercase " >
               <div class="col-sm-6 kolom p-lg-2 p-0 container">
-                <h3 class="text-warning">os:</h3>
+                <h5 class="text-warning">os:</h5>
                 <p class="fs-6">Windows 7 64-bit only (No OSX support at this time)</p>
               </div>
               <div class="col-sm-6 kolom p-lg-2 p-0 container">
-                <h3 class="fs-3 text-warning">processor:</h3>
+                <h5 class="fs-3 text-warning">processor:</h5>
                 <p class="fs-6">Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</p>
               </div>
             </div>
             <div class="row align-items-center col-lg-6 text-uppercase">
               <div class="col-sm-6 kolom p-lg-2 p-0 container">
-                <h3 class="fs-3 text-warning">memory:</h3>
+                <h5 class="fs-3 text-warning">memory:</h5>
                 <p class="fs-6">4 GB RAM</p>
               </div>
               <div class="col kolom p-lg-2 p-0">
-                <h3 class="fs-3 text-warning">storage:</h3>
+                <h5 class="fs-3 text-warning">storage:</h5>
                 <p class="fs-6">8 GB available space</p>
               </div>
             </div>
             <div class="row align-items-end col-lg-6 text-uppercase ">
               <div class="col kolom p-lg-2 p-0 container">
-                <h3 class="fs-3 text-warning">graphics:</h3>
+                <h5 class="fs-3 text-warning">graphics:</h5>
                 <p class="fs-6">NVIDIA GeForce GTX 660 2GB or AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
               </div>
             </div>
@@ -170,35 +172,7 @@
       <!-- End Of Page 4 -->
   <!-- Page 5 -->
   <div class="container-fluid topscore">
-    <div class="container text-white ">
-      <div class="row align-items-center d-flex">
-        <div class="col-sm-5 ">
-          <h1>TOP SCORES</h1>
-          <p class="d-none d-sm-block">
-            This top score from various games provided <br />
-            on this platform
-          </p>
-          <button type="button" class="btn btn-warning col-sm-3 mt-sm-3">SEE MORE</button>
-        </div>
-        <div class="col-sm-7 h-1 border">
-          <div class="mb-lg-5  mb-3 border d-flex justify-content-end">
-            <div class="bg-dark col-sm-9 col-12 d-flex">
-              <div>
-                <img src="/assets/img/image 8.jpg" class="card-img border rounded-circle" alt="..." >
-              </div>
-              <div class="ps-sm-3">
-                <h3 class="text-warning ">Evan Lahti</h3>
-                <p class="text-secondary ">PC Gamer</p>
-              </div>
-              <div class="ms-auto pe-3 ">
-                <img src="/assets/img/twitter.svg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- <div class="cotainer ">
+    <div class="cotainer ">
       <div class="row d-flex align-items-center">
         <div class="col-12 col-sm-6 ps-sm-5 topscore-content">
           <h1>TOP SCORES</h1>
@@ -206,71 +180,70 @@
             This top score from various games provided <br />
             on this platform
           </p>
-          <button type="button" class="btn btn-warning col-sm-3 mt-sm-3">see more</button>
+          <button type="button" class="btn btn-warning col-sm-3 mt-sm-3">SEE MORE</button>
         </div>
-        <div class="col-12 col-sm-6 d-flex flex-column align-items-end cards rounded pcard ">
+        <div class="col-12 col-sm-6 d-flex flex-column align-items-end cards rounded pcard pt-0">
           <div class="card bg-dark mb-lg-5 col-lg-10 col-12 mb-3">
-            <div class="card-top d-flex">
-              <div class="pt-2 pe-2 ">
-                <img src="/assets/img/image 8.jpg" class="rounded-circle fototop" alt="evan-lahti" />
+            <div class="card-top d-flex pb-0">
+              <div class="pt-0 pe-2">
+                <img src="/assets/img/image 8.jpg" class="rounded-circle fototop"  alt=" " />
               </div>
               <div class="ps-sm-3">
-                <h3 class="text-warning ">Evan Lahti</h3>
+                <h5 class="text-warning ">Evan Lahti</h5>
                 <p class="text-secondary ">PC Gamer</p>
               </div>
               <div class="ms-auto pe-3">
-                <img src="/assets/img/twitter.svg" alt="" />
+                <img src="/assets/img/twitter.svg" class="fototop" alt="" />
               </div>
             </div>
-            <div class="ps-3 pt-3">
-              <h3 class="text-light d-none d-sm-block">“One of my gaming highlights of the year.”</h3>
-              <p class="text-secondary ">October 18, 2018</p>
+            <div class="ps-2 p-0">
+              <h5 class="text-light d-none d-sm-block">“One of my gaming highlights of the year.”</h5>
+              <p class="text-secondary">October 18, 2018</p>
             </div>
           </div>
-          <div class="card bg-dark mb-lg-5 col-sm-11 col-12 me-auto rounded mb-3  ">
+          <div class="card bg-dark mb-lg-5 col-sm-11 col-12 me-auto m-0 pt-0">
             <div class="card-top d-flex ">
-              <div class="pt-2 pe-2 ">
+              <div class="pt-0 pe-2 ">
                 <img src="/assets/img/image.jpg" class="rounded-circle fototop" alt="jada-griffin" />
               </div>
               <div class="ps-sm-3 ">
-                <h3 class="text-warning">Jada Griffin</h3>
+                <h5 class="text-warning">Jada Griffin</h5>
                 <p class="text-secondary"> Nerdreactor</p>
               </div>
               <div >
-                <img src="/assets/img/twitter.svg" alt="" />
+                <img src="/assets/img/twitter.svg" class="fototop" alt="" />
               </div>
             </div>
-            <div class="ps-3 pt-3">
-              <h3 class="text-light d-none d-sm-block">“The next big thing in the world of streaming and survival games.”</h3>
+            <div class="ps-3 pt-1">
+              <h5 class="text-light d-none d-sm-block">“The next big thing in the world of streaming and survival games.”</h5>
               <p class="text-secondary">December 21, 2018</p>
             </div>
           </div>
-          <div class="card bg-dark col-sm-11 col-12 rounded  ">
+          <div class="card bg-dark col-sm-11 col-12 rounded m-0 pt-0 ">
             <div class="card-top d-flex">
               <div class="pt-2 pe-2">
                 <img src="/assets/img/image-1.jpg" class="rounded-circle fototop" alt="aaron-williams" />
               </div>
               <div class="ps-sm-3">
-                <h3 class="text-warning">Aaron Williams</h3>
+                <h5 class="text-warning">Aaron Williams</h5>
                 <p class="text-secondary">uproxx</p>
               </div>
               <div class="ms-auto pe-3">
-                <img src="/assets/img/twitter.svg" alt="" />
+                <img src="/assets/img/twitter.svg" class="fototop" alt="" />
               </div>
             </div>
-            <div class="ps-3 pt-3">
-              <h3 class="text-light d-none d-sm-block">“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”</h3>
+            <div class="ps-3 pt-1">
+              <h5 class="text-light d-none d-sm-block">“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”</h5>
               <p class="text-secondary ">December 24, 2018</p>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
-  </div> -->
-  <!-- End Of Page 5
-  <!-- Footer -->
-  <!-- <footer>
-    <div class="container-fluid footer-distributed ">
+    </div>
+  </div>
+  <!-- End Of Page 5 -->
+  <footer>
+    <div class="container-fluid footer-distributed pt-sm-5 pt-3">
       <div class="container col-sm-11 col-12 ">
         <div class="row container">
           <div class="col-md-10 text-center">
@@ -301,7 +274,7 @@
       </div>
    </div>
 
-   </footer> -->
+   </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
